--- a/latex/beamer.tex
+++ b/latex/beamer.tex
@@ -14,6 +14,7 @@
 \usepackage{tabu}
 \usepackage{xcolor}
 \usepackage{colortbl}
+\usepackage{amsmath}
 
 \setbeamercolor{normal text}{fg=white,bg=black!90}
 \setbeamercolor{structure}{fg=white}
@@ -44,81 +45,23 @@
 \begin{frame}
 \maketitle
 \end{frame}\begin{frame}
-\frametitle{Algoritmo SIMPLEX}El algoritmo SIMPLEX fue inventado por George Dantzig\end{frame}
+\frametitle{Algoritmo SIMPLEX}El algoritmo SIMPLEX fue inventado por George Dantzig en 1947. El SIMPLEX ayuda a encontrar la soluci\'on \'optima de un problema de programaci\'on lineal. Utiliza operaciones sobre matrices para encontrar la soluci\'on \'optima o determinar que el problema no tine soluci\'on.\newline Parte de un \textbf{v\'ertice} de la regi\'on factible y se mueve a \textbf{v\'ertices adyacentes} que mejoren lo encontrado hasta encontrar la condici\'on de salida.\end{frame}
 \begin{frame}
 \frametitle{Problema: Sin Nombre}
-\noindent \textbf{Maximizar:}\\
-\tab $Z = $ (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$}\newline\newline
+\noindent \textbf{Minimizar:}\\
+\tab $Z = $ (2,00)\textcolor{yellow}{$x_{1}$} + (3,00)\textcolor{yellow}{$x_{2}$}\newline\newline
 \textbf{Sujeto a:}\\
-\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\end{frame}
-\begin{frame}\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\end{frame}\begin{frame}
+\tab (0,50)\textcolor{yellow}{$x_{1}$} + (0,25)\textcolor{yellow}{$x_{2}$} $\leq$ 4,00\newline\newline\tab \textcolor{yellow}{$x_{1}$} + (3,00)\textcolor{yellow}{$x_{2}$} $\geq$ 20,00\newline\newline\tab \textcolor{yellow}{$x_{1}$} + \textcolor{yellow}{$x_{2}$}= 10,00\newline\newline\end{frame}\begin{frame}
 \frametitle{Tabla Inicial}
 {
 \centering
-\begin{tabu}{|@{}*{20}{p{1.0cm}@{}|}}
+\begin{tabu}{|@{}*{8}{p{1.0cm}@{}|}}
 \rowcolor{black}%
-$Z$& $x_{1}$ & $x_{2}$ & $x_{3}$ & $x_{4}$ & $x_{5}$ & $x_{6}$ & $x_{7}$ & $x_{8}$ \\\hline
- 1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Inicial Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{20}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $s_{1}$& $s_{2}$& $s_{3}$& $s_{4}$& $s_{5}$& $s_{6}$& $s_{7}$& $s_{8}$\\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Inicial Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{20}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $s_{9}$& $s_{10}$& result\\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 1,00 & 0,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 \\\hline
+$Z$& $x_{1}$ & $x_{2}$ & $s_{1}$& $e_{1}$& $a_{1}$& $a_{2}$& result\\\hline
+ 1,00 & -2,00 & -3,00 & 0,00 & 0,00 & -M & -M & 0,00 \\\hline
+ 0,00 & 0,50 & 0,25 & 1,00 & 0,00 & 0,00 & 0,00 & 4,00 \\\hline
+ 0,00 & 1,00 & 3,00 & 0,00 & -1,00 & 1,00 & 0,00 & 20,00 \\\hline
+ 0,00 & 1,00 & 1,00 & 0,00 & 0,00 & 0,00 & 1,00 & 10,00 \\\hline
 \rowcolor{black}%
 \end{tabu}
 }
@@ -126,220 +69,24 @@ $Z$& $x_{1}$ & $x_{2}$ & $x_{3}$ & $x_{4}$ & $x_{5}$ & $x_{6}$ & $x_{7}$ & $x_{8
 \frametitle{Tabla Final}
 {
 \centering
-\begin{tabu}{|@{}*{20}{p{1.0cm}@{}|}}
+\begin{tabu}{|@{}*{8}{p{1.0cm}@{}|}}
 \rowcolor{black}%
-$Z$& $x_{1}$ & $x_{2}$ & $x_{3}$ & $x_{4}$ & $x_{5}$ & $x_{6}$ & $x_{7}$ & $x_{8}$ \\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Final Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{20}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $s_{1}$& $s_{2}$& $s_{3}$& $s_{4}$& $s_{5}$& $s_{6}$& $s_{7}$& $s_{8}$\\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Final Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{20}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $s_{9}$& $s_{10}$& result\\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 \\\hline
- 1,00 & 0,00 & 0,00 \\\hline
- 0,00 & 1,00 & 0,00 \\\hline
+$Z$& $x_{1}$ & $x_{2}$ & $s_{1}$& $e_{1}$& $a_{1}$& $a_{2}$& result\\\hline
+ 1,00 & 0,00 & 0,00 & 0,00 & -0,50 & 0,50 - M& 1,50 - M& 25,00 \\\hline
+ 0,00 & 0,00 & 0,00 & 1,00 & -0,12 & 0,12 & -0,62 & 0,25 \\\hline
+ 0,00 & 0,00 & 1,00 & 0,00 & -0,50 & 0,50 & -0,50 & 5,00 \\\hline
+ 0,00 & 1,00 & 0,00 & 0,00 & 0,50 & -0,50 & 1,50 & 5,00 \\\hline
 \rowcolor{black}%
 \end{tabu}
 }
 \end{frame}\begin{frame}
-\frametitle{Problema: Sin Nombre}
-\noindent \textbf{Maximizar:}\\
-\tab $Z = $ (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$}\newline\newline
-\textbf{Sujeto a:}\\
-\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\end{frame}
-\begin{frame}\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\leq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\geq$ 1,00\newline\newline\tab (1,00)\textcolor{yellow}{$x_{1}$} + (1,00)\textcolor{yellow}{$x_{2}$} + (1,00)\textcolor{yellow}{$x_{3}$} + (1,00)\textcolor{yellow}{$x_{4}$} + (1,00)\textcolor{yellow}{$x_{5}$} + (1,00)\textcolor{yellow}{$x_{6}$} + (1,00)\textcolor{yellow}{$x_{7}$} + (1,00)\textcolor{yellow}{$x_{8}$} $\geq$ 1,00\newline\newline\end{frame}\begin{frame}
-\frametitle{Tabla Inicial}
-{
+\frametitle{Solución}
 \centering
-\begin{tabu}{|@{}*{22}{p{1.0cm}@{}|}}
-\rowcolor{black}%
-$Z$& $x_{1}$ & $x_{2}$ & $x_{3}$ & $x_{4}$ & $x_{5}$ & $x_{6}$ & $x_{7}$ & $x_{8}$ \\\hline
- 1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 & -1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Inicial Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{22}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $s_{1}$& $s_{2}$& $s_{3}$& $s_{4}$& $s_{5}$& $s_{6}$& $s_{7}$& $s_{8}$\\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Inicial Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{22}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $e_{1}$& $e_{2}$& $a_{1}$& $a_{2}$& result\\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- -1,00 & 0,00 & 1,00 & 0,00 & 1,00 \\\hline
- 0,00 & -1,00 & 0,00 & 1,00 & 1,00 \\\hline
-\rowcolor{black}%
-\end{tabu}
-}
-\end{frame}\begin{frame}
-\frametitle{Tabla Final}
-{
-\centering
-\begin{tabu}{|@{}*{22}{p{1.0cm}@{}|}}
-\rowcolor{black}%
-$Z$& $x_{1}$ & $x_{2}$ & $x_{3}$ & $x_{4}$ & $x_{5}$ & $x_{6}$ & $x_{7}$ & $x_{8}$ \\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Final Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{22}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $s_{1}$& $s_{2}$& $s_{3}$& $s_{4}$& $s_{5}$& $s_{6}$& $s_{7}$& $s_{8}$\\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
-
-
-\rowcolor{black}%
-\end{tabu}
-}
-
-\end{frame}
-\begin{frame}
-\frametitle{Tabla Final Cont.}
-{
-\centering
-\begin{tabu}{|@{}*{22}{p{1.0cm}@{}|}}
-\rowcolor{black}%
- $e_{1}$& $e_{2}$& $a_{1}$& $a_{2}$& result\\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 1,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- 0,00 & 0,00 & 0,00 & 0,00 & 0,00 \\\hline
- -1,00 & 0,00 & 1,00 & 0,00 & 0,00 \\\hline
- 0,00 & -1,00 & 0,00 & 1,00 & 0,00 \\\hline
-\rowcolor{black}%
-\end{tabu}
+{$Z = 25,00$\\
+\textcolor{yellow}{$x_{1}$} $ = 5,00$\\
+\textcolor{yellow}{$x_{2}$} $ = 5,00$\\
+\textcolor{green}{$s_{1}$} $ = 0,25$\\
+\textcolor{green}{$e_{1}$} $ = 0$\\
 }
 \end{frame}
 \end{document}
